# tool-slide-bridge

./: .gitignore  CI_GUIDE.md  CLAUDE.md  README.md  TEST_FAILURE_GUIDE.md  TROUBLESHOOTING.md  WORKFLOW.md  coverage.xml  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  epic.md  feature.md  tech_debt.md
.github/workflows/: ci.yml  release.yml  security.yml
examples/: claude_output.md  sample_presentation.md
inspiration/: idea.md
presentations/: ai-strategy.md  ml-fundamentals-pdf.md  ml-fundamentals.md
src/tool_slide_bridge/: __init__.py  cli.py  marp_converter.py
tests/: __init__.py  test_basic.py  test_cli.py  test_integration.py  test_marp_converter.py
themes/: corporate.css
